<resources>
    <string name="app_name">PopFlix</string>
    <string name="sign_in">INICIAR SESIÓN</string>
    <string name="sub_sign_in">Acceda a su cuenta de PopFlix</string>
    <string name="email">correo</string>
    <string name="password">contraseña</string>
    <string name="repeat_password">repita contraseña</string>
    <string name="forgot_password_login">¿Olvidaste la contraseña?</string>
    <string name="forgot_password">OLVIDÉ MI CONTRASEÑA</string>
    <string name="sub_forgot_password">No te preocupes, te ayudaremos a recuperarla</string>
    <string name="next">Siguiente</string>
    <string name="dont_have_account">No tengo una cuenta</string>
    <string name="register_now">Regístrate ahora</string>
    <string name="register">REGISTRARSE</string>
    <string name="sub_register">Cree una cuenta de PopFlix</string>
    <string name="name">nombre</string>
    <string name="surname">apellidos</string>
    <string name="date">fecha de nacimiento</string>
    <string name="privacity">He leído y acepto los términos y la política de privacidad.</string>
    <string name="open_nav">Abrir Navigation Drawner</string>
    <string name="close_nav">Cerrar Navigation Drawner</string>
    <string name="logo">logo</string>
    <string name="menu">Menú</string>
    <string name="home">Inicio</string>
    <string name="movies">Películas</string>
    <string name="reserve">Reservas</string>
    <string name="settings">Ajustes</string>
    <string name="join">Acceder</string>
    <string name="signin">Iniciar sesión</string>
    <string name="register_menu">Registrarse</string>
    <string name="welcome">Bienvenido/a a la app de nuestro cine.</string>
    <string name="logout">Cerrar sesión</string>
    <string name="comment">Críticas</string>
    <string name="discount">Descuentos y promociones</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prueba_comment">prueba comment</string>
    <string name="prueba_discount">prueba discount</string>
    <string name="admin_menu">Administración</string>
    <string name="sub_sign_in_admin">Acceda como administrador a PopFlix</string>
    <string name="news">NOVEDADES</string>
    <string name="slide">Desliza para ver más películas</string>
    <string name="adults_movies">Películas para mayores</string>
    <string name="young_movies">Películas para jóvenes</string>
    <string name="kids_movies">Películas para niños</string>
    <string name="screen">pantalla</string>
    <string name="press_for_info">Pulsa para ver más información de la película</string>
    <string name="reserve_now">Reservar ahora</string>
    <string name="reserve_room">RESERVAR SALA</string>
    <string name="movie_title">Título de la película</string>
    <string name="proceed_with_payment">Proceder con el pago</string>
    <string name="movie_data">DATOS DE LA PELÍCULA</string>
    <string name="title">titulo</string>
    <string name="sub_title">Título:</string>
    <string name="gender">género</string>
    <string name="sub_gender">Género:</string>
    <string name="director">director</string>
    <string name="sub_director">Director:</string>
    <string name="time">Duración (min):</string>
    <string name="sub_time">duración</string>
    <string name="pegi">Clasificación de edad:</string>
    <string name="sub_pegi">clasificación</string>
    <string name="sypnosis">Sinopsis:</string>
    <string name="sub_sypnosis">sinopsis</string>
    <string name="movie">pelicula</string>
    <string name="payment_swap">Pulse en el desplegable para cambiar el método de pago</string>
    <string name="invoice_email">correo para recibo</string>
    <string name="card_number">número de tarjeta</string>
    <string name="date_expiration">fecha de expiración</string>
    <string name="cvv">CVV</string>
    <string name="phone_number">número de teléfono</string>
    <string name="box_office_payment">Pago en Taquilla - No se requiere información adicional</string>
    <string name="confirm_payment">Confirmar Pago</string>
    <string name="discounts_title">DESCUENTOS Y PROMOCIONES</string>
    <string name="all_rates_title">Todas las tarifas y promociones que ofrecemos</string>
    <string name="ordinary_rate">Tarifa ordinaria</string>
    <string name="box_office_or_web">Taquilla o web: 7€</string>
    <string name="reduced_rate">Tarifa reducida</string>
    <string name="sub_reduced_rate">Menores de 18 años, mayores de 60 años, minusvalía, carnet estudiante, carnet joven, familia numerosa o monoparental: 6€</string>
    <string name="morning_rate">Tarifa matinales</string>
    <string name="sub_morning_rate">Sábado y domingo: 4,50€ (web) - 5,90€ (taquilla)</string>
    <string name="wednesday_rate">Tarifa miércoles</string>
    <string name="sub_wednesday_rate">Día del espectador: 4,50€ (Excepto festivos)</string>
    <string name="supplement_3d_glasses">Suplemento alquiler de gafas 3D = 1,50€</string>
    <string name="reserves">RESERVAS</string>
    <string name="sub_reserves">A continuación se muestran tus reservas</string>
    <string name="settings_title">CONFIGURACIÓN</string>
    <string name="notifications">Notificaciones</string>
    <string name="recieve_notifications">Recibir notificaciones</string>
    <string name="account">Cuenta</string>
    <string name="change_account_info">Cambiar información de cuenta</string>
    <string name="language">Idioma</string>
    <string name="theme">Tema</string>
    <string name="save_configuration">Guardar Configuraciones</string>
    <string name="add_comment">Añadir Comentario</string>
    <string name="choose_movie">Elige una película:</string>
    <string name="your_comment">Tu comentario:</string>
    <string name="write_comment_here">Escribe tu comentario aquí</string>
    <string name="rating">Calificación:</string>
    <string name="send">Enviar</string>
</resources>