<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/principal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discounts_title"
        android:textColor="@color/texto"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="26sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_rates_title"
        android:textColor="@color/texto"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp" />

    <!-- Tarifa ordinaria -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ordinary_rate"
        android:textColor="@color/texto"
        android:textStyle="bold"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/box_office_or_web"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/texto"
        android:textSize="14sp" />

    <!-- Tarifa reducida -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reduced_rate"
        android:layout_marginTop="32dp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:textColor="@color/texto"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub_reduced_rate"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/texto"
        android:textSize="14sp" />

    <!-- Tarifa matinales -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/morning_rate"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/texto"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub_morning_rate"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/texto"
        android:textSize="14sp" />

    <!-- Tarifa miércoles -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wednesday_rate"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/texto"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub_wednesday_rate"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/texto"
        android:textSize="14sp" />

    <!-- Suplemento alquiler de gafas 3D -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supplement_3d_glasses"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:textColor="@color/texto"
        android:textSize="18sp" />

</LinearLayout>
