<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#222831"
    android:paddingStart="16dp"
    android:paddingTop="32dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/user_email_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginTop="8dp"/>

</LinearLayout>
