<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textoIniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="50sp"
                android:textColor="@color/texto"
                android:layout_marginTop="100dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/campoName"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:hint="@string/name"
                android:textAlignment="center"
                android:textColor="@color/texto"
                android:textColorHint="@color/texto"
                android:ems="10"
                android:inputType="text"
                android:background="@drawable/edittext_fondo"
                android:layout_marginTop="100dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"/>

            <EditText
                android:id="@+id/campoApellidos"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:hint="@string/surname"
                android:textAlignment="center"
                android:textColor="@color/texto"
                android:textColorHint="@color/texto"
                android:ems="10"
                android:inputType="text"
                android:background="@drawable/edittext_fondo"
                android:layout_marginTop="-50dp"
                android:layout_marginStart="190dp"
                android:layout_marginEnd="32dp"/>

            <EditText
                android:id="@+id/campoUser"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:textAlignment="center"
                android:textColor="@color/texto"
                android:textColorHint="@color/texto"
                android:ems="10"
                android:inputType="text"
                android:background="@drawable/edittext_fondo"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"/>

            <EditText
                android:id="@+id/campoPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:textAlignment="center"
                android:textColor="@color/texto"
                android:textColorHint="@color/texto"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/edittext_fondo"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"/>

            <EditText
                android:id="@+id/campoFecha"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/date"
                android:textAlignment="center"
                android:textColor="@color/texto"
                android:textColorHint="@color/texto"
                android:ems="10"
                android:inputType="date"
                android:background="@drawable/edittext_fondo"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"/>


            <CheckBox
                android:id="@+id/campoConsentimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/texto"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:text="@string/privacity"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/botonSiguiente"
                style="@android:style/Widget.Button"
                android:layout_marginTop="28dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/boton"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>